Imps: 1. add mvnw 2. improve scripts Fix: 1. correct CommonRPA